# GW2-TrueWorldCompletion

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-release.yml
data/: all_maps.json  all_maps_v1.json
src/: Cache.cpp  Cache.hpp  CharacterCache.cpp  CompletionCache.cpp  CompletionManager.cpp  CompletionManager.hpp  Constants.hpp  DataAccessor.hpp  Entry.cpp  Globals.cpp  Globals.hpp  Hint.hpp  HintManager.cpp  HintManager.hpp  LinkHints.cpp  Logging.hpp  Options.cpp  Options.hpp  StyleManager.cpp  StyleManager.hpp  Utils.hpp  Workarounds.cpp  Workarounds.hpp
src/Anomaly/: Remove.hpp  Repair.hpp  Replace.hpp
src/Completion/: Byte.hpp  Cache.cpp  Cache.hpp  Info.hpp  Store.cpp  Store.hpp  Test.hpp  Value.hpp
src/Configurable/: Colour.hpp  ColourPalette.cpp  ColourPalette.hpp  ContentExclusions.cpp  ContentExclusions.hpp  EnumSerialization.cpp  ExclusionReason.hpp  ExpansionAssignment.hpp  IncompleteMapHint.hpp  MinorPatch.cpp  MinorPatch.hpp  TextFormat.cpp  TextFormat.hpp  WorldCompletion.hpp
src/Constant/: Cache.hpp  Config.hpp  ContinentIdentifier.hpp  HeroChallengeRecord.hpp  MapIdentifier.hpp  Other.hpp  PointOfInterestRecord.hpp  RegionIdentifier.hpp  RenownHeartRecord.hpp  StoryContent.hpp  WaypointRecord.hpp
src/Content/: Cache.cpp  Cache.hpp  Container.hpp  Descriptor.hpp  Features.hpp  Identifier.hpp  Record.hpp  Type.hpp
src/Filter/: CompletionReward.hpp  Continent.hpp  ExcludedFeatures.hpp  Expansion.hpp  ExpansionAccess.hpp  Factory.cpp  Factory.hpp  Interface.hpp  UserExclusions.hpp
src/Format/: CharacterProgressText.hpp  CharacterProgressTooltip.hpp  WorldMapProgress.hpp
src/Hint/: ApiLink.cpp  ApiLink.hpp  Interface.hpp  Manager.cpp  Manager.hpp  MapRecenter.hpp  WikiLink.cpp  WikiLink.hpp
src/Map/: Definition.hpp  Descriptor.cpp  Descriptor.hpp  Entity.hpp  Features.hpp  Utils.cpp  Utils.hpp
src/Model/: Continent.hpp  Converter.cpp  Converter.hpp  DescribedContent.hpp  Expansion.hpp  Festival.hpp
src/Style/: Definition.hpp  Manager.cpp  Manager.hpp
src/Text/: Localization.hpp  String.cpp
src/Workaround/: AbsentContent.hpp  AbsentMaps.hpp  AccessAnomaly.hpp  CoupledMaps.hpp  Repair.hpp  RetiredContent.hpp  RetiredMaps.hpp  UnlistedContent.hpp
src/caching/: CharacterCache.hpp  CompletionCache.cpp  CompletionCache.hpp  ContentCache.hpp  ContentSubsetCache.hpp
src/hints/: Hint.hpp  HintManager.cpp  HintManager.hpp  LinkHints.cpp
src/model/: CachedCompletion.hpp  Colour.hpp  Completion.hpp  Content.hpp  ContentDescriptor.hpp  Converter.cpp  Converter.hpp  CustomCompletion.hpp  DescribedContent.hpp  IdInclusion.hpp  MapClassification.hpp  MapCompletion.hpp  MapInclusion.hpp  WorldContext.hpp
src/options/: ColoursConfigurator.cpp  ColoursConfigurator.hpp  Exclusions.hpp  ExclusionsConfigurator.cpp  ExclusionsConfigurator.hpp
src/util/: Classification.hpp  Serialization.hpp
